# macrolab

./: CMakeLists.txt  README.md  macros.h  main.cpp
algorithm/: union_find.cpp  union_find.h
biol/: amino_acid.cpp  amino_acid.h  amino_acid_constants.h  amino_acid_types.cpp  amino_acid_types.h  atom.cpp  atom.h  atom_constants.h  biol.h  fragment.cpp  fragment.h  membrane.h  peak.cpp  peak.h  residue.cpp  residue.h
math/: coord3d.cpp  coord3d.h  matrix.cpp  matrix.h
tests/: test_atom.cpp  test_union_find.cpp
